# netconf-client-playground

./: .gitignore  Cargo.toml  README.md  TODO
netconf-cli/: Cargo.toml  TODO
netconf-cli/src/: clap_args.rs  cli_manager.rs  cli_state.rs  command_handler.rs  commands.rs  explicit_calls.rs  main.rs  reedline_helpers.rs  rustyline_helper.rs
netconf-cli/src/cli_manager/: cli_config.rs  custom_completer.rs  custom_hinter.rs  custom_prompt.rs
netconf-cli/src/command_handler/: clap_commands.rs  cli_config_commands.rs  cli_handler.rs  netconf_commands.rs  netconf_handler.rs  root_commands.rs  root_handler.rs  show_commands.rs
netconf-cli/src/commands/: clap_commands.rs  commands_handler.rs
netconf-cli/src/reedline_helpers/: command_completer.rs  custom_prompt.rs
netconf-client/: Cargo.toml
netconf-client/src/: common.rs  lib.rs  message_validation.rs  messages.rs  netconf_session.rs  ssh_client.rs  types.rs
netconf-client/src/messages/: cancel_commit.rs  close_session.rs  commit.rs  copy_config.rs  delete_config.rs  discard_changes.rs  edit_config.rs  get.rs  get_config.rs  hello.rs  kill_session.rs  lock.rs  unlock.rs  validate.rs
netconf-client/src/types/: capability.rs  config_waypoint.rs  datastore.rs  filter.rs  rpc_error.rs  rpc_reply.rs  simple_response.rs
src/: main.rs  netconf.rs  netconf_client.rs  rpc.rs  ssh_client.rs
src/netconf/: capability.rs  common.rs  messages.rs  types.rs
src/netconf/messages/: close_session.rs  copy_config.rs  edit_config.rs  get.rs  get_config.rs  hello.rs  kill_session.rs  lock.rs  unlock.rs
src/netconf/types/: capability.rs  filter.rs  rpc_error.rs  rpc_reply.rs  simple_response.rs  tag_wrapper.rs
src/netconf_client/: common.rs  messages.rs  netconf_session.rs  ssh_client.rs  types.rs
src/netconf_client/messages/: cancel_commit.rs  close_session.rs  commit.rs  copy_config.rs  delete_config.rs  discard_changes.rs  edit_config.rs  get.rs  get_config.rs  hello.rs  kill_session.rs  lock.rs  unlock.rs  validate.rs
src/netconf_client/types/: datastore.rs  filter.rs  rpc_error.rs  rpc_reply.rs  simple_response.rs  url.rs
