[package]
name = "netconf-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1"
clap = { version = "3", features = ["derive", "unstable-multicall"] }
shlex = "1.1.0"
reedline = "0.5.0"
# reedline = { git = "https://github.com/nushell/reedline" }
# tokio = { version = "1", features = ["full"] }
netconf-client = { path = "../netconf-client" }
colored = "2.0.0"
# termcolor = "1.1.3"
time = "0.3.9"