[package]
name = "netconf-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1.0.56"
quick-xml = { version = "0.22.0", features = ["serialize"] }
serde= { version = "1.0.137", features = ["derive"]}
ssh2 = "0.9.3"
